terraform/ec2.tf
resource "aws_instance" "ec2-public-vaction" {
  ami                    = "ami-0e86e20dae9224db8"  # Ubuntu 22.04 LTS
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public.id
  associate_public_ip_address = true
  vpc_security_group_ids = [aws_security_group.sg-public-vaction.id]
  key_name = "key-ec2-public-vaction"

  provisioner "file" {
    source      = "./public.sh"
    destination = "/home/ubuntu/public.sh"
  }

  provisioner "file" {
    source      = "../../key-ec2-private-vaction.pem"
    destination = "/home/ubuntu/.ssh/key-ec2-private-vaction.pem"
  }

  connection {
    type        = "ssh"
    user        = "ubuntu"  
    private_key = file("../../key-ec2-public-vaction.pem")
    host        = self.public_ip
  }

  tags = {
    Name = "ec2-public-vaction"
  }
}

resource "aws_instance" "ec2-private-vaction" {
  ami                    = "ami-0e86e20dae9224db8"  # Ubuntu 22.04 LTS
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.private.id
  associate_public_ip_address = false
  vpc_security_group_ids = [aws_security_group.sg-private-vaction.id]
  key_name = "key-ec2-private-vaction"

  depends_on = [aws_instance.ec2-public-vaction, aws_route_table_association.assoc_private]

  provisioner "file" {
    source      = "./private.sh"
    destination = "/home/ubuntu/private.sh"
  }

  provisioner "file" {
    source      = "C:/Users/Gabriel/Desktop/faculdade/6-sem-pi/banco-de-dados"
    destination = "/tmp/database"
  }


  connection {
    type        = "ssh"
    user        = "ubuntu"
    private_key = file("../../key-ec2-private-vaction.pem")
    host        = self.private_ip

    bastion_host        = aws_instance.ec2-public-vaction.public_ip
    bastion_user        = "ubuntu"
    bastion_private_key = file("../../key-ec2-public-vaction.pem")
  }

  tags = {
    Name = "ec2-private-vaction"
  }
}

# ======================== Armazenando o IP do MySql no AWS SSM ========================

resource "aws_ssm_parameter" "private_ip" {
  name  = "/config/backend_private_ip"
  type  = "String"
  value = aws_instance.ec2-private-vaction.private_ip
  overwrite   = true
}

# ======================== Executando o Script de Configuração ========================
resource "null_resource" "configurar_bd" {
  depends_on = [aws_instance.ec2-public-vaction, aws_instance.ec2-private-vaction]

  provisioner "remote-exec" {
    inline = [
      "sudo chmod +x /home/ubuntu/private.sh",
      "sudo bash /home/ubuntu/private.sh"
    ]
  }

  connection {
    type        = "ssh"
    user        = "ubuntu"
    private_key = file("../../key-ec2-private-vaction.pem")
    host        = aws_instance.ec2-private-vaction.private_ip

    bastion_host        = aws_instance.ec2-public-vaction.public_ip
    bastion_user        = "ubuntu"
    bastion_private_key = file("../../key-ec2-public-vaction.pem")
  }
}

resource "null_resource" "configurar_frontend" {
  depends_on = [aws_instance.ec2-public-vaction, aws_instance.ec2-private-vaction, null_resource.configurar_bd]

  provisioner "remote-exec" {
    inline = [
      "sudo chmod 400 ~/.ssh/key-ec2-private-vaction.pem",
      "sudo chmod +x /home/ubuntu/public.sh",
      "sudo bash /home/ubuntu/public.sh ${aws_instance.ec2-private-vaction.private_ip}"
    ]
  }

  connection {
    type        = "ssh"
    host        = aws_instance.ec2-public-vaction.public_ip
    user        = "ubuntu"
    private_key = file("../../key-ec2-public-vaction.pem")
  }
}

# ======================== Outputs (para visualizar os IPs) ========================
output "nginx_public_ip" {
  description = "IP Público do Servidor Nginx"
  value       = aws_instance.ec2-public-vaction.public_ip
}

output "backend_private_ip" {
  description = "IP Privado do Servidor MySQL"
  value       = aws_instance.ec2-private-vaction.private_ip
}
